Travail sur la page d'accueil de l'API, avec gestion des animations et des styles, toutes largeurs d'écran confondues.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+@import "tailwindcss";
+@font-face {
+  font-family: 'Starjedi';
+  src: url('../../public/fonts/Starjedi.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
