Continuation et finalisation du travail sur la page d'accueil de l'API, avec gestion des animations et des styles, toutes largeurs d'écran confondues.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,12 @@
-@import "tailwindcss";
 @font-face {
   font-family: 'Starjedi';
   src: url('../../public/fonts/Starjedi.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'NotoSansMono';
+  src: url('../../public/fonts/NotoSansMono.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
