--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -19,7 +19,7 @@
 }
 
 .heading {
-  margin-top: 1.5rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
   font-weight: bold;
   text-align: center;
@@ -37,28 +37,61 @@
 }
 
 .subheading {
+  font-family: Starjedi;
+  text-transform: lowercase;
   margin-top: 2rem;
   font-size: 1.7rem;
   font-weight: bold;
   width: 50%;
+  min-width: 350px;
 }
 
 .route {
   margin-top: 2rem;
 }
 
-.route, .code, .unorderedlist, .firstroute, .codeblockcontainer, .subheading {
+.route, .unorderedlist, .firstroute, .codeblockcontainer {
   width: 50%;
   min-width: 350px;
   text-align: justify;
 }
 
+.code {
+  font-family: NotoSansMono;
+  color: gray;
+  width: fit-content;
+}
+
+.unorderedlist {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: .7rem;
+}
+
+.codeblockcontainer {
+  opacity: .9;
+  overflow-x: scroll;
+}
+
+.codeblock {
+  border-radius: 5px;
+  filter: invert(1);
+  width: 100%;
+  padding: 10px 0;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-family: NotoSansMono;
+}
+
 .footer {
   text-align: center;
   margin-top: 3rem;
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
   font-style: italic;
   color: #aaa;
+  width: 50%;
+  min-width: 250px;
 }
 
 .footerLink {
