--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -63,7 +63,8 @@
 }
 
 .unorderedlist {
-  list-style-type: none;
+  list-style-type: square;
+  margin-left: 2.2rem;
   display: flex;
   flex-direction: column;
   gap: .7rem;
