--- a/src/app/stars-rain-animation.scss
+++ b/src/app/stars-rain-animation.scss
@@ -9,8 +9,10 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  // background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   overflow: hidden;
+  background: url('../../public/images/background/bg_01.webp') no-repeat center center fixed;
+  background-size: cover;
 }
 
 @function random_range($min, $max) {
