--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Starjedi';
-  src: url('../../public/fonts/Starjedi.ttf') format('truetype');
+  src: url('../../../public/fonts/Starjedi.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'NotoSansMono';
-  src: url('../../public/fonts/NotoSansMono.ttf') format('truetype');
+  src: url('../../../public/fonts/NotoSansMono.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
