--- a/src/app/styles/stars-rain-animation.scss
+++ b/src/app/styles/stars-rain-animation.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @mixin sp-layout {
   @media screen and (max-width: 750px) {
     @content;
@@ -11,13 +12,13 @@ body {
   min-height: 100vh;
   // background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
   overflow: hidden;
-  background: url('../../public/images/background/bg_01.webp') no-repeat center center fixed;
+  background: url('../../../public/images/background/bg_01.webp') no-repeat center center fixed;
   background-size: cover;
 }
 
 @function random_range($min, $max) {
-  $rand: random();
-  $random_range: $min + floor($rand * (($max - $min) + 1));
+  $rand: math.random();
+  $random_range: $min + math.floor($rand * (($max - $min) + 1));
   @return $random_range;
 }
 
@@ -60,10 +61,14 @@ body {
 
   @for $i from 1 through $star-count {
     &:nth-child(#{$i}) {
-      --star-tail-length: #{random_range(500em, 750em) / 100};
-      --top-offset: #{random_range(0vh, 10000vh) / 100};
-      --fall-duration: #{random_range(6000, 12000s) / 1000};
-      --fall-delay: #{random_range(0, 10000s) / 1000};
+      // --star-tail-length: #{random_range(500em, 750em) / 100};
+      --star-tail-length: calc(#{random_range(500em, 750em)} / 100);
+      // --top-offset: #{random_range(0vh, 10000vh) / 100};
+      --top-offset: calc(#{random_range(0vh, 10000vh)} / 100);
+      // --fall-duration: #{random_range(6000, 12000s) / 1000};
+      --fall-duration: calc(#{random_range(6000, 12000s)} / 1000);
+      // --fall-delay: #{random_range(0, 10000s) / 1000};
+      --fall-delay: calc(#{random_range(0, 10000s)} / 1000);
     }
   }
 
